# proc-daemon

./: CHANGELOG.md  Cargo.toml  README.md  TODO.md
.cargo/: audit.toml
.github/workflows/: ci.yml
benches/: daemon_bench.rs
docs/: API.md  PERFORMANCE.md  PRINCIPLES.md  README.md
examples/: comprehensive.rs  daemon.toml  hot_reload.rs  metrics_server.rs  simple.rs
scripts/: ci-check.sh  verify-complete.sh
src/: config.rs  coord.rs  daemon.rs  error.rs  ipc.rs  lib.rs  lock.rs  metrics.rs  pool.rs  profiling.rs  resources.rs  shutdown.rs  shutdown_fix.rs  signal.rs  subsystem.rs
tests/: async_std_tests.rs  integration.rs
