[package]
name = "proc-daemon"
version = "0.5.0"
edition = "2021"
rust-version = "1.75.0"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <codeca@jamesgober.dev>"
]

description = "A foundational framework for building high-performance, resilient daemon services in Rust. Handles all the boilerplate for signal handling, graceful shutdown, logging, and configuration."

keywords = [
    "daemon",
    "cross-platform",
    "systemd",
    "process",
    "background",
    "service",
    "framework", 
    "tokio", 
    "async", 
    "shutdown", 
    "resilience",
    "performance",
    "zero-copy"
]

categories = [
    "os::unix-apis", 
    "os::windows-apis", 
    "development-tools",
    "network-programming",
    "concurrency",
    "asynchronous"
]

documentation = "https://docs.rs/proc-daemon"
repository = "https://github.com/jamesgober/proc-daemon"
homepage = "https://github.com/jamesgober/proc-daemon"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "proc_daemon"
path = "src/lib.rs"

[dependencies]
fs2 = "0.4.3"
# Core async runtime support (feature-flagged)
tokio = { version = "1.37", features = [
    "rt-multi-thread", 
    "macros", 
    "sync", 
    "time", 
    "signal",
    "process",
    "io-util"
], optional = true }
async-std = { version = "1.12", features = ["attributes"], optional = true }

# Logging framework (mandatory for production)
tracing = { version = "0.1", features = ["std"] }
tracing-subscriber = { version = "0.3", features = [
    "env-filter", 
    "json", 
    "fmt",
    "ansi",
    "registry"
] }

# Configuration management (mandatory)
figment = { version = "0.10", features = ["toml", "env", "json"] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.8", optional = true }

# Error handling (mandatory)
thiserror = "1.0"

# Performance and memory management
arc-swap = "1.7"          # Lock-free atomic Arc swapping
parking_lot = "0.12"      # High-performance synchronization primitives
crossbeam = "0.8"         # Lock-free data structures
once_cell = "1.19"        # Lazy static initialization
fastrand = "2.0"          # Fast random number generation
futures = "0.3"           # Additional future utilities
num_cpus = "1.16.0"       # CPU count detection

# Metrics and monitoring (optional)
metrics = { version = "0.17", optional = true }

# Console/terminal support (optional)
console = { version = "0.15", optional = true }

# JSON logging support (optional)
serde_json = { version = "1.0", optional = true }

# Configuration file watching (optional)
notify = { version = "6.1", optional = true }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }
libc = "0.2"

# Cross-platform signal handling
ctrlc = "3.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_System_Console",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation",
    "Wdk_System_SystemInformation",
    "Wdk_Foundation"
], optional = true }
ctrlc = "3.4"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.6"

[features]
default = ["tokio", "toml"]

# Runtime selection (mutually exclusive)
tokio = ["dep:tokio"]
async-std = ["dep:async-std"]

# Optional features
metrics = ["dep:metrics"]
console = ["dep:console"] 
json-logs = ["serde_json", "serde"]
config-watch = ["notify"]
windows-monitoring = ["windows"]
backtrace = []
serde = []

# Development features
full = [
    "tokio",
    "metrics", 
    "console",
    "json-logs",
    "config-watch"
]

[[bench]]
name = "daemon_bench"
harness = false
required-features = ["tokio"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
debug = true
